[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/components/ComponentItemsList.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/parts/PartItemsSelector.gd" type="Script" id=2]

[node name="ItemSelector" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -250.0
margin_right = 200.0
margin_bottom = 250.0
rect_min_size = Vector2( 400, 500 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 493.0

[node name="Titulo" type="MarginContainer" parent="VBoxContainer"]
margin_right = 386.0
margin_bottom = 20.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Titulo"]
margin_right = 386.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="VBoxContainer/Titulo/HBoxContainer"]
margin_top = 3.0
margin_right = 342.0
margin_bottom = 17.0
size_flags_horizontal = 3
text = "Selecciona un item"
valign = 1

[node name="ButtonClose" type="Button" parent="VBoxContainer/Titulo/HBoxContainer"]
margin_left = 346.0
margin_right = 386.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )
text = "x"

[node name="Separator1" type="HSeparator" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 386.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 10 )

[node name="Contents" type="MarginContainer" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 386.0
margin_bottom = 486.0
size_flags_vertical = 7

[node name="ItemsList" parent="VBoxContainer/Contents" instance=ExtResource( 1 )]
margin_right = 386.0
margin_bottom = 448.0

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="VBoxContainer/Titulo/HBoxContainer/ButtonClose" to="." method="_on_ButtonClose_pressed"]
[connection signal="selected_item" from="VBoxContainer/Contents/ItemsList" to="." method="_on_ItemsList_selected_item"]
